--- a/HTML/网页设计liupx/index.html
+++ b/HTML/网页设计liupx/index.html
@@ -105,7 +105,7 @@
                         <a class="page-scroll" href="#feature">实验介绍</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#call-to-action">注意事项</a>
+                        <a class="page-scroll" href="#action">注意事项</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about-us">填写问卷</a>
@@ -221,7 +221,7 @@
                     </div><!-- /.col-md-3 -->
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="feature">
-                            <i class="fa fa-plug"></i>
+                            <i class="fa fa-joomla"></i>
                             <div class="feature-content">
                                 <h3>实验设计</h3>
                                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor. reprehenderit</p>
@@ -254,12 +254,12 @@
 
 
     <!-- Start Call to Action Section -->
-    <section class="call-to-action">
+    <section id="action" class="call-to-action">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                  <h3>注意事项</h3> <br />
-                  <p>本实验包括问卷和实验两部分，请先完成Qultrics问卷填写，再进入Inquisit在线实验平台进行实验。</p>
+                  <h2>注意事项</h2> <br />
+                  <font size="4">本实验包括问卷和实验两部分，请先完成问卷填写，再进入在线实验平台进行实验。<br />问卷部分提供了问卷链接入口和二维码，可选择在PC或移动端填写。<br />进入Inquisit在线试验平台后需按照指引下载插件，再进行实验。</font>
                 </div>
             </div>
         </div>
@@ -1102,52 +1102,20 @@
                 <div class="col-lg-12">
                     <div class="section-title text-center">
                         <h3>Contact With Us</h3>
-                        <p class="white-text">Duis aute irure dolor in reprehenderit in voluptate</p>
+                        <p class="white-text"><br /><br />您可以通过以下途径联系实验小组人员，询问实验进展、领取被试费等，<br /><br />也欢迎您给我们提出宝贵的意见。</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-primary">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-contact-info">
                         <h4>Contact info</h4>
                         <ul>
-                            <li><strong>E-mail :</strong> your-email@mail.com</li>
-                            <li><strong>Phone :</strong> +8801-6778776</li>
-                            <li><strong>Mobile :</strong> +8801-45565378</li>
-                            <li><strong>Web :</strong> yourdomain.com</li>
+                            <li><strong>E-mail :</strong> carl.80080880@gmail.com</li>
+                            <li><strong>Mobile :</strong> 15729319162</li>
+                            <li><strong>Github web:</strong><a href="https://github.com/CarlHey/IQML"  target="blank">https://github.com/CarlHey/IQML</a></li>
+                            <li><strong>BNUpsy web:</strong> <a href="http://psych.bnu.edu.cn/"  target="blank"> http://psych.bnu.edu.cn/</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1167,26 +1135,14 @@
         <footer class="style-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-xs-12">
-                        <span class="copyright">Copyright &copy; GuardinTheme 2015. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></span>
+                    <div class="col-md-6 col-xs-12">
+                        <span class="copyright">Copyright &copy; Faculty of Psychology from Beijing Normal University 2018. <br />More info <a href="http://psych.bnu.edu.cn/" target="_blank" title="北京师范大学心理学部">北京师范大学心理学部</a>
                     </div>
-                    <div class="col-md-4 col-xs-12">
-                        <div class="footer-social text-center">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-xs-12">
+                    <div class="col-md-6 col-xs-12">
                         <div class="footer-link">
                             <ul class="pull-right">
-                                <li><a href="#">Privacy Policy</a>
-                                </li>
-                                <li><a href="#">Terms of Use</a>
+                                
+                                <li>  <a class="page-scroll" href="#page-top">回到主页</a>
                                 </li>
                             </ul>
                         </div>
