--- a/HTML/网页设计liupx/index.html
+++ b/HTML/网页设计liupx/index.html
@@ -119,9 +119,6 @@
                     <li>
                         <a class="page-scroll" href="#contact">联系我们</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#testimonial">了解更多</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -170,7 +167,7 @@
                     		  <span>问卷<strong>&</strong>实验</span>
                     	    </h1>
                             <p class="animated2">在这项网页研究中，您将依次进行问卷填写及实验两个部分<br> 请在开始前仔细阅读下面的注意事项</p>
-                            <a href="#portfolio" class="page-scroll btn btn-primary animated3" >read more</a>
+                            <a href="#action" class="page-scroll btn btn-primary animated3" >read more</a>
                         </div>
                     </div>
                 </div>
