--- a/HTML/网页设计liupx/index.html
+++ b/HTML/网页设计liupx/index.html
@@ -90,6 +90,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Experiment</a>
+                <a href="http://psych.bnu.edu.cn/" target="_blank"><img src="images/logos/touxiang.jpg" width="50" height="50"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -160,7 +161,6 @@
 
                 <div class="item">
                     <img class="img-responsive" src="images/header-back.png" alt="slider">
-
                     <div class="slider-content">
                         <div class="col-md-12 text-center">
                             <h1 class="animated1">
@@ -1111,8 +1111,8 @@
                         <ul>
                             <li><strong>E-mail :</strong> carl.80080880@gmail.com</li>
                             <li><strong>Mobile :</strong> 15729319162</li>
-                            <li><strong>Github web:</strong><a href="https://github.com/CarlHey/IQML"  target="blank">https://github.com/CarlHey/IQML</a></li>
-                            <li><strong>BNUpsy web:</strong> <a href="http://psych.bnu.edu.cn/"  target="blank"> http://psych.bnu.edu.cn/</a></li>
+                            <li><strong>Github web:</strong><a href="https://github.com/CarlHey/IQML"  target="_blank">https://github.com/CarlHey/IQML</a></li>
+                            <li><strong>BNUpsy web:</strong> <a href="http://psych.bnu.edu.cn/"  target="_blank"> http://psych.bnu.edu.cn/</a></li>
                         </ul>
                     </div>
                 </div>
