--- a/HTML/网页设计liupx/index.html
+++ b/HTML/网页设计liupx/index.html
@@ -305,23 +305,14 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title text-center">
-                            <h3>About Us</h3>
+                            <h3>填写问卷</h3>
                             <p>Duis aute irure dolor in reprehenderit in voluptate</p>
                         </div>
                 </div>
             </div>
             <div class="row">
 
-                <div class="col-md-4">
-                    <div class="welcome-section text-center">
-                        <img src="images/about-01.jpg" class="img-responsive" alt="..">
-                        <h4>Office Philosophy</h4>
-                        <div class="border"></div>
-                        <p>Duis aute irure dolor in reprehen derit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Lorem reprehenderit</p>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="welcome-section text-center">
                         <img src="images/about-02.jpg" class="img-responsive" alt="..">
                         <h4>Office Mission & Vission</h4>
@@ -330,7 +321,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="welcome-section text-center">
                         <img src="images/about-03.jpg" class="img-responsive" alt="..">
                         <h4>Office Value & Rules</h4>
@@ -346,178 +337,13 @@
     <!-- End About Us Section -->
 
 
-    <!-- Start Fun Facts Section -->
-    <section class="fun-facts">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-3">
-                      <div class="counter-item">
-                        <i class="fa fa-cloud-upload"></i>
-                        <div class="timer" id="item1" data-to="991" data-speed="5000"></div>
-                        <h5>Files uploaded</h5>
-                      </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3">
-                      <div class="counter-item">
-                        <i class="fa fa-check"></i>
-                        <div class="timer" id="item2" data-to="7394" data-speed="5000"></div>
-                        <h5>Projects completed</h5>
-                      </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3">
-                      <div class="counter-item">
-                        <i class="fa fa-code"></i>
-                        <div class="timer" id="item3" data-to="18745" data-speed="5000"></div>
-                        <h5>Lines of code written</h5>
-                      </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-3">
-                      <div class="counter-item">
-                        <i class="fa fa-male"></i>
-                        <div class="timer" id="item4" data-to="8423" data-speed="5000"></div>
-                        <h5>Happy clients</h5>
-                      </div>
-                    </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Fun Facts Section -->
-
-
-
-    <!-- Start Team Member Section -->
-    <section id="team" class="team-member-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="section-title text-center">
-                            <h3>Our Team</h3>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate</p>
-                        </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12">
-                    <div id="team-section">
-
-
-
-
-
-                                <div class="our-team">
-
-                                    <div class="team-member">
-                                        <img src="images/team/manage-1.png" class="img-responsive" alt="">
-                                        <div class="team-details">
-                                            <h4>John Doe</h4>
-                                            <p>Founder & Director</p>
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                    <div class="team-member">
-                                        <img src="images/team/manage-2.png" class="img-responsive" alt="">
-                                        <div class="team-details">
-                                            <h4>John Doe</h4>
-                                            <p>Founder & Director</p>
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                    <div class="team-member">
-                                        <img src="images/team/manage-3.png" class="img-responsive" alt="">
-                                        <div class="team-details">
-                                            <h4>John Doe</h4>
-                                            <p>Founder & Director</p>
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                    <div class="team-member">
-                                        <img src="images/team/manage-4.png" class="img-responsive" alt="">
-                                        <div class="team-details">
-                                            <h4>John Doe</h4>
-                                            <p>Founder & Director</p>
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                    <div class="team-member">
-                                        <img src="images/team/manage-1.png" class="img-responsive" alt="">
-                                        <div class="team-details">
-                                            <h4>John Doe</h4>
-                                            <p>Founder & Director</p>
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-                                    <div class="team-member">
-                                        <img src="images/team/manage-2.png" class="img-responsive" alt="">
-                                        <div class="team-details">
-                                            <h4>John Doe</h4>
-                                            <p>Founder & Director</p>
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-
-
-                                </div>
-
-
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <!-- End Team Member Section -->
-
-
-
     <!-- Start Latest News Section -->
     <section id="latest-news" class="latest-news-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center">
-                        <h3>Latest News</h3>
+                        <h3>实验</h3>
                         <p>Duis aute irure dolor in reprehenderit in voluptate</p>
                     </div>
                 </div>
@@ -601,6 +427,89 @@
         </div>
     </section>
     <!-- End Latest News Section -->
+
+
+
+
+
+        <!-- Start Team Member Section -->
+        <section id="team" class="team-member-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="section-title text-center">
+                                <h3>Our Team</h3><br />
+                                <p>下面是此项网页实验小组成员、各自负责项目以及社交方式</p>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div id="team-section">
+
+
+                                    <div class="our-team">
+                                        <div class="team-member">
+                                            <img src="images/team/image_captain.jpg" class="img-responsive" alt="">
+                                            <div class="team-details">
+                                                <h4>何滢</h4>
+                                                <p>实验小组组长</p>
+                                                <ul>
+                                                    <li><a href="https://github.com/CarlHey" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-qq"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="team-member">
+                                            <img src="images/team/image_html.jpg" class="img-responsive" alt="">
+                                            <div class="team-details">
+                                                <h4>刘沛鑫</h4>
+                                                <p>网页制作</p>
+                                                <ul>
+                                                    <li><a href="https://github.com/CarlHey/IQML" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+                                                    <li><a href="https://user.qzone.qq.com/826121722"><i class="fa fa-qq"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-weixin"></i></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="team-member">
+                                            <img src="images/team/image_inquisit.jpg" class="img-responsive" alt="">
+                                            <div class="team-details">
+                                                <h4>周衍青</h4>
+                                                <p>inquisit实验设计</p>
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="team-member">
+                                            <img src="images/team/image_qualtrics.jpg" class="img-responsive" alt="">
+                                            <div class="team-details">
+                                                <h4>王钟若</h4>
+                                                <p>qualtrics问卷制作</p>
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Team Member Section -->
+
 
 
 
