--- a/HTML/index.html
+++ b/HTML/index.html
@@ -281,7 +281,7 @@
 
                 <div class="col-md-4">
                     <div class="welcome-section text-center">
-                        <img src="images/logos/touxiang.jpg" class="img-responsive" width="100px" height="100px" >
+                        <img src="images/logos/touxiang.jpg" class="img-responsive" width="100px" height="100px;" >
                         <h4>问卷二维码</h4>
                         <div class="border"></div>
 
@@ -289,9 +289,9 @@
                 </div>
 
                 <div class="col-md-4 col-md-offset-4">
-                    <div class="welcome-section text-center">
-                        <img src="images/about-03.jpg" class="img-responsive" alt="..">
-                        <h4>Qualtrics在线调查平台</h4>
+                    <div class="welcome-section text-center"><br /><br /><br /><br /><br />
+                      <a href="https://www.baidu.com" target="_blank" class="btn btn-primary" style="width: 400px; height: 85px; font-size:45px">填写问卷</a>
+                        <br /><br /><br /><br /><h4>Qualtrics在线调查平台</h4>
                         <div class="border"></div>
                     </div>
                 </div>
@@ -315,7 +315,7 @@
 
                 <div class="col-md-12">
                     <div class="welcome-section text-center">
-                        <img src="images/logos/touxiang.jpg" class="img-responsive" alt="..">
+                      <a href="https://www.baidu.com" target="_blank" class="btn btn-primary" style="width: 400px; height: 85px; font-size:45px">开始实验</a>
                         <h4>Inquisit实验平台</h4>
                         <div class="border"></div>
 
