--- a/HTML/index.html
+++ b/HTML/index.html
@@ -448,10 +448,10 @@
         <footer class="style-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-xs-12">
-                        <span class="copyright">Copyright &copy; Faculty of Psychology from Beijing Normal University 2018. <br />More info <a href="http://psych.bnu.edu.cn/" target="_blank" title="北京师范大学心理学部">北京师范大学心理学部</a>
+                    <div class="col-md-8 col-xs-12">
+                        <span class="copyright">Copyright &copy; 2017-2018 <a href="http://psych.bnu.edu.cn/" target="_blank" title="北京师范大学心理学部"> Faculty of Psychology, Beijing Normal University</a> all rights reserved. <br />More info <a href="http://github.com/CarlHey" target="_blank" >githubCarlhey</a>.
                     </div>
-                    <div class="col-md-6 col-xs-12">
+                    <div class="col-md-4 col-xs-12">
                         <div class="footer-link">
                             <ul class="pull-right">
                                 <li>  <a class="page-scroll" href="#page-top">回到主页</a>
