--- a/HTML/index.html
+++ b/HTML/index.html
@@ -449,7 +449,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-xs-12">
-                        <span class="copyright">Copyright &copy; 2017-2018 <a href="http://psych.bnu.edu.cn/" target="_blank" title="北京师范大学心理学部"> Faculty of Psychology, Beijing Normal University</a> all rights reserved. <br />More info <a href="http://github.com/CarlHey" target="_blank" >githubCarlhey</a>.
+                        <span class="copyright">Copyright &copy; 2017-2018 <a href="http://psych.bnu.edu.cn/" target="_blank" title="北京师范大学心理学部"> Faculty of Psychology, Beijing Normal University</a> all rights reserved. <br />More info <a href="https://github.com/CarlHey/IQML" target="_blank" >CarlHeyIQML</a>.
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="footer-link">
