--- a/HTML/index.html
+++ b/HTML/index.html
@@ -281,7 +281,7 @@
 
                 <div class="col-md-4">
                     <div class="welcome-section text-center">
-                        <img src="images/logos/touxiang.jpg" class="img-responsive" width="100px" height="100px;" >
+                        <img src="images/logos/erweima.png" class="img-responsive" width="100px" height="100px;" >
                         <h4>问卷二维码</h4>
                         <div class="border"></div>
 
@@ -290,7 +290,7 @@
 
                 <div class="col-md-4 col-md-offset-4">
                     <div class="welcome-section text-center"><br /><br /><br /><br /><br />
-                      <a href="https://www.baidu.com" target="_blank" class="btn btn-primary" style="width: 400px; height: 85px; font-size:45px">填写问卷</a>
+                      <a href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_8qOiy4INq4Pw8EB"  class="btn btn-primary" style="width: 400px; height: 85px; font-size:45px">填写问卷</a>
                         <br /><br /><br /><br /><h4>Qualtrics在线调查平台</h4>
                         <div class="border"></div>
                     </div>
